--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nys-parks-map",
   "version": "0.1.0",
-  "homepage": "http://www.aduff.org/nys-parks-map",
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-offline-hoc": "^1.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
